--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "require": {
         "php": ">=5.3",
-        "react/http": "dev-master"
+        "react/http": "dev-master",
+        "monolog/monolog": "1.3.x-dev"
     }
 }
