--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "require": {
         "php": ">=5.3",
         "react/http": "dev-master",
+        "symfony/symfony": "2.1.*",
         "monolog/monolog": "1.3.x-dev"
     }
 }
