--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "php": ">=5.3",
         "react/http": "dev-master",
         "symfony/symfony": "2.1.*",
+        "sensio/framework-extra-bundle": "2.1.*",
         "monolog/monolog": "1.3.x-dev"
     }
 }
