--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "react/http": "dev-master",
         "symfony/symfony": "2.1.*",
         "sensio/framework-extra-bundle": "2.1.*",
+        "symfony/monolog-bundle": "2.1.*",
         "monolog/monolog": "1.3.x-dev"
     }
 }
