--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "require": {
         "php": ">=5.3",
-        "react/http": "dev-master",
+        "react/http": "0.2.*",
         "symfony/symfony": "2.1.*",
         "monolog/monolog": "1.3.x-dev"
     },
