--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,6 @@
         "monolog/monolog": "1.3.x-dev"
     },
     "require-dev": {
-        "sensio/framework-extra-bundle": "2.1.*",
-        "symfony/monolog-bundle": "2.1.*"
+        "dantudor/mockfs": "dev-master"
     }
 }
