--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_script:
   - composer require monolog/monolog:1.3.x-dev
   - composer require sensio/framework-extra-bundle:2.1.*
   - composer require symfony/monolog-bundle:2.1.*
+  - composer require dantudor/mockfs:dev-master
 
 script: phpunit -c tests --coverage-text
 
