--- a/examples/ExampleBundle/app/config/config.yml
+++ b/examples/ExampleBundle/app/config/config.yml
@@ -7,7 +7,7 @@ framework:
     form: true
     csrf_protection: true
     validation: { enable_annotations: true }
-    templating: { engines: ['twig', 'php'] }
+    templating: { engines: ['twig'] }
     session:
 
 twig:
