excluded Resources from testSuite

--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -13,6 +13,9 @@
     <filter>
         <whitelist>
             <directory suffix=".php">../src</directory>
+            <exclude>
+                <directory>../src/*/Resources</directory>
+            </exclude>
         </whitelist>
     </filter>
 
