--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         "php": ">=5.3",
         "react/http": "0.2.*",
         "symfony/symfony": "2.1.*",
-        "sensio/generator-bundle": "2.1.*",
-        "monolog/monolog": "1.3.x-dev"
+        "sensio/generator-bundle": "2.1.*"
     },
     "require-dev": {
         "dantudor/mockfs": "dev-master"
