--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "require": {
         "php": ">=5.3",
-        "react/http": "0.2.*",
+        "react/http": "0.2.*"
     },
     "require-dev": {
         "symfony/symfony": "2.1.6",
